--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install aiohttp discord.py aioredis
+        pip install aioredis
+        pip install git+https://github.com/Rapptz/discord.py
         pip install pylint
     - name: Analysing the code with pylint
       run: |
