--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,9 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install python-Levenshtein
-        pip install aioredis
-        pip install git+https://github.com/Rapptz/discord.py
+        pip install -r requirements.txt
         pip install pylint
     - name: Analysing the code with pylint
       run: |
